修复MQTT的bug